[wheel]
universal = 1

[metadata]
name = volfit
author = Jonathan Barnoud
author_email = j.barnoud@rug.nl
license = Apache 2.0
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry

[options]
packages = find:
setup-requires =
    setuptools >= 30.3.0
    cython
    pbr
install-requires =  # ?? requires-dist?
    numpy
zip-safe = False

